# parseidf

./: .gitignore  parseidf.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_parseidf.py
